@@ -22,52 +22,53 @@ import javax.inject.Inject;
 import javax.inject.Named;
 import javax.inject.Singleton;
 
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Path;
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ForkJoinPool;
-import java.util.concurrent.ForkJoinTask;
+import java.util.concurrent.*;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.apache.maven.ProjectCycleException;
 import org.apache.maven.RepositoryUtils;
+import org.apache.maven.api.Session;
 import org.apache.maven.api.feature.Features;
+import org.apache.maven.api.model.*;
+import org.apache.maven.api.services.MavenException;
+import org.apache.maven.api.services.ModelBuilder;
+import org.apache.maven.api.services.ModelBuilderException;
+import org.apache.maven.api.services.ModelBuilderRequest;
+import org.apache.maven.api.services.ModelBuilderResult;
+import org.apache.maven.api.services.ModelProblem;
+import org.apache.maven.api.services.ModelResolver;
+import org.apache.maven.api.services.ModelResolverException;
+import org.apache.maven.api.services.ModelSource;
+import org.apache.maven.api.services.ModelTransformerContext;
+import org.apache.maven.api.services.ModelTransformerContextBuilder;
+import org.apache.maven.api.services.Source;
+import org.apache.maven.api.services.model.ModelBuildingListener;
+import org.apache.maven.api.services.model.ModelProcessor;
 import org.apache.maven.artifact.Artifact;
 import org.apache.maven.artifact.InvalidArtifactRTException;
 import org.apache.maven.artifact.InvalidRepositoryException;
 import org.apache.maven.artifact.repository.ArtifactRepository;
 import org.apache.maven.bridge.MavenRepositorySystem;
-import org.apache.maven.internal.impl.DefaultSession;
-import org.apache.maven.model.Build;
-import org.apache.maven.model.Dependency;
-import org.apache.maven.model.DependencyManagement;
-import org.apache.maven.model.DeploymentRepository;
-import org.apache.maven.model.Extension;
-import org.apache.maven.model.Model;
-import org.apache.maven.model.Plugin;
-import org.apache.maven.model.Profile;
-import org.apache.maven.model.ReportPlugin;
+import org.apache.maven.internal.impl.InternalSession;
 import org.apache.maven.model.building.ArtifactModelSource;
-import org.apache.maven.model.building.DefaultModelBuilder;
-import org.apache.maven.model.building.DefaultModelBuildingRequest;
 import org.apache.maven.model.building.DefaultModelProblem;
 import org.apache.maven.model.building.FileModelSource;
-import org.apache.maven.model.building.ModelBuilder;
-import org.apache.maven.model.building.ModelBuildingException;
-import org.apache.maven.model.building.ModelBuildingRequest;
-import org.apache.maven.model.building.ModelBuildingResult;
-import org.apache.maven.model.building.ModelProblem;
-import org.apache.maven.model.building.ModelProcessor;
-import org.apache.maven.model.building.ModelSource;
-import org.apache.maven.model.building.StringModelSource;
-import org.apache.maven.model.building.TransformerContext;
-import org.apache.maven.model.building.TransformerContextBuilder;
-import org.apache.maven.model.resolution.ModelResolver;
+import org.apache.maven.model.building.ModelSource2;
+import org.apache.maven.model.building.ModelSource3;
+import org.apache.maven.model.resolution.UnresolvableModelException;
 import org.apache.maven.model.root.RootLocator;
 import org.apache.maven.repository.internal.ArtifactDescriptorUtils;
-import org.apache.maven.repository.internal.ModelCacheFactory;
 import org.apache.maven.utils.Os;
 import org.eclipse.aether.RepositorySystem;
 import org.eclipse.aether.RepositorySystemSession;
@@ -88,7 +89,7 @@ import org.slf4j.LoggerFactory;
 @Singleton
 public class DefaultProjectBuilder implements ProjectBuilder {
     public static final String BUILDER_PARALLELISM = "maven.projectBuilder.parallelism";
-    public static final int DEFAULT_BUILDER_PARALLELISM = 4;
+    public static final int DEFAULT_BUILDER_PARALLELISM = Runtime.getRuntime().availableProcessors() / 2 + 1;
 
     private final Logger logger = LoggerFactory.getLogger(getClass());
     private final ModelBuilder modelBuilder;
@@ -98,7 +99,6 @@ public class DefaultProjectBuilder implements ProjectBuilder {
     private final org.eclipse.aether.RepositorySystem repoSystem;
     private final RemoteRepositoryManager repositoryManager;
     private final ProjectDependenciesResolver dependencyResolver;
-    private final ModelCacheFactory modelCacheFactory;
 
     private final RootLocator rootLocator;
 
@@ -112,7 +112,6 @@ public class DefaultProjectBuilder implements ProjectBuilder {
             RepositorySystem repoSystem,
             RemoteRepositoryManager repositoryManager,
             ProjectDependenciesResolver dependencyResolver,
-            ModelCacheFactory modelCacheFactory,
             RootLocator rootLocator) {
         this.modelBuilder = modelBuilder;
         this.modelProcessor = modelProcessor;
@@ -121,7 +120,6 @@ public class DefaultProjectBuilder implements ProjectBuilder {
         this.repoSystem = repoSystem;
         this.repositoryManager = repositoryManager;
         this.dependencyResolver = dependencyResolver;
-        this.modelCacheFactory = modelCacheFactory;
         this.rootLocator = rootLocator;
     }
     // ----------------------------------------------------------------------
@@ -131,7 +129,76 @@ public class DefaultProjectBuilder implements ProjectBuilder {
     @Override
     public ProjectBuildingResult build(File pomFile, ProjectBuildingRequest request) throws ProjectBuildingException {
         try (BuildSession bs = new BuildSession(request, false)) {
-            return bs.build(pomFile, new FileModelSource(pomFile));
+            Path path = pomFile.toPath();
+            return bs.build(path, ModelSource.fromPath(path));
+        }
+    }
+
+    @Deprecated
+    @Override
+    public ProjectBuildingResult build(
+            org.apache.maven.model.building.ModelSource modelSource, ProjectBuildingRequest request)
+            throws ProjectBuildingException {
+        return build(toSource(modelSource), request);
+    }
+
+    @Deprecated
+    private ModelSource toSource(org.apache.maven.model.building.ModelSource modelSource) {
+        if (modelSource instanceof FileModelSource fms) {
+            return ModelSource.fromPath(fms.getPath());
+        } else if (modelSource instanceof ArtifactModelSource ams) {
+            return ModelSource.fromPath(ams.getPath(), ams.toString());
+        } else {
+            return new ModelSource() {
+                @Override
+                public ModelSource resolve(ModelLocator modelLocator, String relative) {
+                    if (modelSource instanceof ModelSource3 ms) {
+                        return toSource(ms.getRelatedSource(
+                                new org.apache.maven.model.locator.ModelLocator() {
+                                    @Override
+                                    public File locatePom(File projectDirectory) {
+                                        return null;
+                                    }
+
+                                    @Override
+                                    public Path locatePom(Path projectDirectory) {
+                                        return null;
+                                    }
+
+                                    @Override
+                                    public Path locateExistingPom(Path project) {
+                                        return modelLocator.locateExistingPom(project);
+                                    }
+                                },
+                                relative));
+                    }
+                    return null;
+                }
+
+                @Override
+                public Path getPath() {
+                    return null;
+                }
+
+                @Override
+                public InputStream openStream() throws IOException {
+                    return modelSource.getInputStream();
+                }
+
+                @Override
+                public String getLocation() {
+                    return modelSource.getLocation();
+                }
+
+                @Override
+                public Source resolve(String relative) {
+                    if (modelSource instanceof ModelSource2 ms) {
+                        return toSource(ms.getRelatedSource(relative));
+                    } else {
+                        return null;
+                    }
+                }
+            };
         }
     }
 
@@ -169,9 +236,9 @@ public class DefaultProjectBuilder implements ProjectBuilder {
 
         File pomFile;
 
-        ModelBuildingRequest request;
+        ModelBuilderRequest request;
 
-        ModelBuildingResult result;
+        ModelBuilderResult result;
 
         MavenProject project;
 
@@ -183,8 +250,8 @@ public class DefaultProjectBuilder implements ProjectBuilder {
 
         InterimResult(
                 File pomFile,
-                ModelBuildingRequest request,
-                ModelBuildingResult result,
+                ModelBuilderRequest request,
+                ModelBuilderResult result,
                 MavenProject project,
                 boolean root) {
             this.pomFile = pomFile;
@@ -194,7 +261,7 @@ public class DefaultProjectBuilder implements ProjectBuilder {
             this.root = root;
         }
 
-        InterimResult(ModelBuildingRequest request, ProjectBuildingResult projectBuildingResult) {
+        InterimResult(ModelBuilderRequest request, ProjectBuildingResult projectBuildingResult) {
             this.request = request;
             this.projectBuildingResult = projectBuildingResult;
             this.pomFile = projectBuildingResult.getPomFile();
@@ -207,15 +274,17 @@ public class DefaultProjectBuilder implements ProjectBuilder {
         private final RepositorySystemSession session;
         private final List<RemoteRepository> repositories;
         private final ReactorModelPool modelPool;
-        private final TransformerContextBuilder transformerContextBuilder;
-        private final ForkJoinPool forkJoinPool;
+        private final ConcurrentMap<String, Object> parentCache;
+        private final ModelTransformerContextBuilder transformerContextBuilder;
+        private final ExecutorService executor;
 
         BuildSession(ProjectBuildingRequest request, boolean localProjects) {
             this.request = request;
             this.session =
                     RepositoryUtils.overlay(request.getLocalRepository(), request.getRepositorySession(), repoSystem);
+            InternalSession.from(session);
             this.repositories = RepositoryUtils.toRepos(request.getRemoteRepositories());
-            this.forkJoinPool = new ForkJoinPool(getParallelism(request));
+            this.executor = createExecutor(getParallelism(request));
             if (localProjects) {
                 this.modelPool = new ReactorModelPool();
                 this.transformerContextBuilder = modelBuilder.newTransformerContextBuilder();
@@ -223,11 +292,45 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                 this.modelPool = null;
                 this.transformerContextBuilder = null;
             }
+            this.parentCache = new ConcurrentHashMap<>();
+        }
+
+        ExecutorService createExecutor(int parallelism) {
+            //
+            // We need an executor that will not block.
+            // We can't use work stealing, as we are building a graph
+            // and this could lead to cycles where a thread waits for
+            // a task to finish, then execute another one which waits
+            // for the initial task...
+            // In order to work around that problem, we override the
+            // invokeAll method, so that whenever the method is called,
+            // the pool core size will be incremented before submitting
+            // all the tasks, then the thread will block waiting for all
+            // those subtasks to finish.
+            // This ensures the number of running workers is no more than
+            // the defined parallism, while making sure the pool will not
+            // be exhausted
+            //
+            return new ThreadPoolExecutor(
+                    parallelism, Integer.MAX_VALUE, 0L, TimeUnit.MILLISECONDS, new LinkedBlockingQueue<>()) {
+                final AtomicInteger parked = new AtomicInteger();
+
+                @Override
+                public <T> List<Future<T>> invokeAll(Collection<? extends Callable<T>> tasks)
+                        throws InterruptedException {
+                    setCorePoolSize(parallelism + parked.incrementAndGet());
+                    try {
+                        return super.invokeAll(tasks);
+                    } finally {
+                        setCorePoolSize(parallelism + parked.decrementAndGet());
+                    }
+                }
+            };
         }
 
         @Override
         public void close() {
-            this.forkJoinPool.shutdownNow();
+            this.executor.shutdownNow();
         }
 
         private int getParallelism(ProjectBuildingRequest request) {
@@ -246,7 +349,7 @@ public class DefaultProjectBuilder implements ProjectBuilder {
             return Math.max(1, Math.min(parallelism, Runtime.getRuntime().availableProcessors()));
         }
 
-        ProjectBuildingResult build(File pomFile, ModelSource modelSource) throws ProjectBuildingException {
+        ProjectBuildingResult build(Path pomFile, ModelSource modelSource) throws ProjectBuildingException {
             ClassLoader oldContextClassLoader = Thread.currentThread().getContextClassLoader();
 
             try {
@@ -256,31 +359,31 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                 Throwable error = null;
 
                 if (project == null) {
-                    ModelBuildingRequest request = getModelBuildingRequest();
-
                     project = new MavenProject();
-                    project.setFile(pomFile);
+                    project.setFile(pomFile != null ? pomFile.toFile() : null);
 
-                    DefaultModelBuildingListener listener =
+                    ModelBuildingListener listener =
                             new DefaultModelBuildingListener(project, projectBuildingHelper, this.request);
-                    request.setModelBuildingListener(listener);
 
-                    request.setPomFile(pomFile);
-                    request.setModelSource(modelSource);
-                    request.setLocationTracking(true);
+                    ModelBuilderRequest.ModelBuilderRequestBuilder builder = getModelBuildingRequest();
+                    ModelBuilderRequest request = builder.projectBuild(modelPool != null)
+                            .source(modelSource)
+                            .locationTracking(true)
+                            .listener(listener)
+                            .build();
 
                     if (pomFile != null) {
-                        project.setRootDirectory(
-                                rootLocator.findRoot(pomFile.getParentFile().toPath()));
+                        project.setRootDirectory(rootLocator.findRoot(pomFile.getParent()));
                     }
 
-                    ModelBuildingResult result;
+                    ModelBuilderResult result;
                     try {
                         result = modelBuilder.build(request);
-                    } catch (ModelBuildingException e) {
+                    } catch (ModelBuilderException e) {
                         result = e.getResult();
                         if (result == null || result.getEffectiveModel() == null) {
-                            throw new ProjectBuildingException(e.getModelId(), e.getMessage(), pomFile, e);
+                            throw new ProjectBuildingException(
+                                    e.getModelId(), e.getMessage(), pomFile != null ? pomFile.toFile() : null, e);
                         }
                         // validation error, continue project building and delay failing to help IDEs
                         error = e;
@@ -300,10 +403,10 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                 }
 
                 ProjectBuildingResult result =
-                        new DefaultProjectBuildingResult(project, modelProblems, resolutionResult);
+                        new DefaultProjectBuildingResult(project, convert(modelProblems), resolutionResult);
 
                 if (error != null) {
-                    ProjectBuildingException e = new ProjectBuildingException(Arrays.asList(result));
+                    ProjectBuildingException e = new ProjectBuildingException(List.of(result));
                     e.initCause(error);
                     throw e;
                 }
@@ -336,41 +439,31 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                         artifact.getId(), "Error resolving project artifact: " + e.getMessage(), e);
             }
 
-            File pomFile = pomArtifact.getFile();
+            Path pomFile = pomArtifact.getPath();
 
-            if ("pom".equals(artifact.getType())) {
+            if (!artifact.isResolved() && "pom".equals(artifact.getType())) {
                 artifact.selectVersion(pomArtifact.getVersion());
-                artifact.setFile(pomFile);
+                artifact.setFile(pomFile.toFile());
                 artifact.setResolved(true);
             }
 
             if (localProject) {
-                return build(pomFile, new FileModelSource(pomFile));
+                return build(pomFile, ModelSource.fromPath(pomFile));
             } else {
                 return build(
                         null,
-                        new ArtifactModelSource(
-                                pomFile, artifact.getGroupId(), artifact.getArtifactId(), artifact.getVersion()));
+                        ModelSource.fromPath(
+                                pomFile,
+                                artifact.getGroupId() + ":" + artifact.getArtifactId() + ":" + artifact.getVersion()));
             }
         }
 
         List<ProjectBuildingResult> build(List<File> pomFiles, boolean recursive) throws ProjectBuildingException {
-            ForkJoinTask<List<ProjectBuildingResult>> task = forkJoinPool.submit(() -> doBuild(pomFiles, recursive));
-
-            // ForkJoinTask.getException rewraps the exception in a weird way
-            // which cause an additional layer of exception, so try to unwrap it
-            task.quietlyJoin();
-            if (task.isCompletedAbnormally()) {
-                Throwable e = task.getException();
-                Throwable c = e.getCause();
-                uncheckedThrow(c != null && c.getClass() == e.getClass() ? c : e);
-            }
-
-            List<ProjectBuildingResult> results = task.getRawResult();
+            List<ProjectBuildingResult> results = doBuild(pomFiles, recursive);
             if (results.stream()
                     .flatMap(r -> r.getProblems().stream())
-                    .anyMatch(p -> p.getSeverity() != ModelProblem.Severity.WARNING)) {
-                ModelProblem cycle = results.stream()
+                    .anyMatch(p -> p.getSeverity() != org.apache.maven.model.building.ModelProblem.Severity.WARNING)) {
+                org.apache.maven.model.building.ModelProblem cycle = results.stream()
                         .flatMap(r -> r.getProblems().stream())
                         .filter(p -> p.getException() instanceof CycleDetectedException)
                         .findAny()
@@ -401,7 +494,7 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                 if (Features.buildConsumer(request.getUserProperties())) {
                     request.getRepositorySession()
                             .getData()
-                            .set(TransformerContext.KEY, transformerContextBuilder.build());
+                            .set(ModelTransformerContext.KEY, transformerContextBuilder.build());
                 }
 
                 return results;
@@ -417,14 +510,21 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                 Set<File> aggregatorFiles,
                 boolean root,
                 boolean recursive) {
-            List<ForkJoinTask<InterimResult>> tasks = pomFiles.stream()
-                    .map(pomFile -> ForkJoinTask.adapt(
+            List<Callable<InterimResult>> tasks = pomFiles.stream()
+                    .map(pomFile -> ((Callable<InterimResult>)
                             () -> build(projectIndex, pomFile, concat(aggregatorFiles, pomFile), root, recursive)))
                     .collect(Collectors.toList());
-
-            return ForkJoinTask.invokeAll(tasks).stream()
-                    .map(ForkJoinTask::getRawResult)
-                    .collect(Collectors.toList());
+            try {
+                List<Future<InterimResult>> futures = executor.invokeAll(tasks);
+                List<InterimResult> list = new ArrayList<>();
+                for (Future<InterimResult> future : futures) {
+                    InterimResult interimResult = future.get();
+                    list.add(interimResult);
+                }
+                return list;
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
         }
 
         private <T> Set<T> concat(Set<T> set, T elem) {
@@ -446,32 +546,34 @@ public class DefaultProjectBuilder implements ProjectBuilder {
             project.setRootDirectory(
                     rootLocator.findRoot(pomFile.getParentFile().toPath()));
 
-            ModelBuildingRequest modelBuildingRequest = getModelBuildingRequest()
-                    .setPomFile(pomFile)
-                    .setTwoPhaseBuilding(true)
-                    .setLocationTracking(true);
-
             DefaultModelBuildingListener listener =
                     new DefaultModelBuildingListener(project, projectBuildingHelper, request);
-            modelBuildingRequest.setModelBuildingListener(listener);
 
-            ModelBuildingResult result;
+            ModelBuilderRequest modelBuildingRequest = getModelBuildingRequest()
+                    .source(ModelSource.fromPath(pomFile.toPath()))
+                    .projectBuild(true)
+                    .twoPhaseBuilding(true)
+                    .locationTracking(true)
+                    .listener(listener)
+                    .build();
+
+            ModelBuilderResult result;
             try {
                 result = modelBuilder.build(modelBuildingRequest);
-            } catch (ModelBuildingException e) {
+            } catch (ModelBuilderException e) {
                 result = e.getResult();
                 if (result == null || result.getFileModel() == null) {
                     return new InterimResult(
                             modelBuildingRequest,
-                            new DefaultProjectBuildingResult(e.getModelId(), pomFile, e.getProblems()));
+                            new DefaultProjectBuildingResult(e.getModelId(), pomFile, convert(e.getProblems())));
                 }
                 // validation error, continue project building and delay failing to help IDEs
                 // result.getProblems().addAll(e.getProblems()) ?
             }
 
-            Model model = modelBuildingRequest.getFileModel();
+            Model model = result.getActivatedFileModel();
 
-            modelPool.put(model.getPomFile().toPath(), model);
+            modelPool.put(model.getPomFile(), model);
 
             InterimResult interimResult = new InterimResult(pomFile, modelBuildingRequest, result, project, isRoot);
 
@@ -485,10 +587,11 @@ public class DefaultProjectBuilder implements ProjectBuilder {
 
                     module = module.replace('\\', File.separatorChar).replace('/', File.separatorChar);
 
-                    File moduleFile = modelProcessor.locateExistingPom(new File(basedir, module));
+                    Path modulePath = modelProcessor.locateExistingPom(new File(basedir, module).toPath());
+                    File moduleFile = modulePath != null ? modulePath.toFile() : null;
 
                     if (moduleFile == null) {
-                        ModelProblem problem = new DefaultModelProblem(
+                        ModelProblem problem = new org.apache.maven.internal.impl.model.DefaultModelProblem(
                                 "Child module " + moduleFile + " of " + pomFile + " does not exist",
                                 ModelProblem.Severity.ERROR,
                                 ModelProblem.Version.BASE,
@@ -497,7 +600,6 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                                 -1,
                                 null);
                         result.getProblems().add(problem);
-
                         continue;
                     }
 
@@ -519,7 +621,7 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                         }
                         buffer.append(moduleFile);
 
-                        ModelProblem problem = new DefaultModelProblem(
+                        ModelProblem problem = new org.apache.maven.internal.impl.model.DefaultModelProblem(
                                 "Child module " + moduleFile + " of " + pomFile + " forms aggregation cycle " + buffer,
                                 ModelProblem.Severity.ERROR,
                                 ModelProblem.Version.BASE,
@@ -551,30 +653,56 @@ public class DefaultProjectBuilder implements ProjectBuilder {
             // which may cause some re-entrance in the build() method and can
             // actually cause deadlocks.  In order to workaround the problem,
             // we do a first pass by reading all rawModels in order.
-            if (modelBuilder instanceof DefaultModelBuilder) {
-                List<ProjectBuildingResult> results = new ArrayList<>();
-                DefaultModelBuilder dmb = (DefaultModelBuilder) modelBuilder;
-                boolean failure = false;
-                for (InterimResult r : interimResults) {
-                    DefaultProjectBuildingResult res;
-                    try {
-                        Model model = dmb.buildRawModel(r.request);
-                        res = new DefaultProjectBuildingResult(model.getId(), model.getPomFile(), null);
-                    } catch (ModelBuildingException e) {
-                        failure = true;
-                        res = new DefaultProjectBuildingResult(e.getModelId(), r.request.getPomFile(), e.getProblems());
-                    }
-                    results.add(res);
+            List<ProjectBuildingResult> results = new ArrayList<>();
+            boolean failure = false;
+            for (InterimResult r : interimResults) {
+                DefaultProjectBuildingResult res;
+                try {
+                    Model model = modelBuilder.buildRawModel(r.request);
+                    res = new DefaultProjectBuildingResult(
+                            model.getId(),
+                            model.getPomFile() != null ? model.getPomFile().toFile() : null,
+                            null);
+                } catch (ModelBuilderException e) {
+                    failure = true;
+                    res = new DefaultProjectBuildingResult(
+                            e.getModelId(),
+                            r.request.getSource().getPath() != null
+                                    ? r.request.getSource().getPath().toFile()
+                                    : null,
+                            convert(e.getProblems()));
                 }
-                if (failure) {
-                    return results;
-                }
+                results.add(res);
+            }
+            if (failure) {
+                return results;
             }
 
-            return interimResults.parallelStream()
-                    .map(interimResult -> doBuild(projectIndex, interimResult))
-                    .flatMap(List::stream)
+            List<Callable<List<ProjectBuildingResult>>> callables = interimResults.stream()
+                    .map(interimResult ->
+                            (Callable<List<ProjectBuildingResult>>) () -> doBuild(projectIndex, interimResult))
                     .collect(Collectors.toList());
+
+            try {
+                List<Future<List<ProjectBuildingResult>>> futures = executor.invokeAll(callables);
+                return futures.stream()
+                        .map(listFuture -> {
+                            try {
+                                return listFuture.get();
+                            } catch (InterruptedException e) {
+                                uncheckedThrow(e);
+                                return null;
+                            } catch (ExecutionException e) {
+                                uncheckedThrow(e.getCause());
+                                return null;
+                            }
+                        })
+                        .flatMap(List::stream)
+                        .collect(Collectors.toList());
+            } catch (InterruptedException e) {
+                uncheckedThrow(e);
+                return null;
+            }
         }
 
         private List<ProjectBuildingResult> doBuild(Map<File, MavenProject> projectIndex, InterimResult interimResult) {
@@ -583,21 +711,23 @@ public class DefaultProjectBuilder implements ProjectBuilder {
             }
             MavenProject project = interimResult.project;
             try {
-                ModelBuildingResult result = modelBuilder.build(interimResult.request, interimResult.result);
+                ModelBuilderResult result = modelBuilder.build(ModelBuilderRequest.builder(interimResult.request)
+                        .interimResult(interimResult.result)
+                        .build());
 
                 // 2nd pass of initialization: resolve and build parent if necessary
+                List<org.apache.maven.model.building.ModelProblem> problems = convert(result.getProblems());
                 try {
                     initProject(project, projectIndex, result);
                 } catch (InvalidArtifactRTException iarte) {
-                    result.getProblems()
-                            .add(new DefaultModelProblem(
-                                    null,
-                                    ModelProblem.Severity.ERROR,
-                                    null,
-                                    result.getEffectiveModel(),
-                                    -1,
-                                    -1,
-                                    iarte));
+                    problems.add(new DefaultModelProblem(
+                            null,
+                            org.apache.maven.model.building.ModelProblem.Severity.ERROR,
+                            null,
+                            new org.apache.maven.model.Model(result.getEffectiveModel()),
+                            -1,
+                            -1,
+                            iarte));
                 }
 
                 List<ProjectBuildingResult> results = build(projectIndex, interimResult.modules);
@@ -610,25 +740,45 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                     resolutionResult = resolveDependencies(project);
                 }
 
-                results.add(new DefaultProjectBuildingResult(project, result.getProblems(), resolutionResult));
+                results.add(new DefaultProjectBuildingResult(project, problems, resolutionResult));
 
                 return results;
-            } catch (ModelBuildingException e) {
+            } catch (ModelBuilderException e) {
                 DefaultProjectBuildingResult result;
                 if (project == null || interimResult.result.getEffectiveModel() == null) {
-                    result = new DefaultProjectBuildingResult(e.getModelId(), interimResult.pomFile, e.getProblems());
+                    result = new DefaultProjectBuildingResult(
+                            e.getModelId(), interimResult.pomFile, convert(e.getProblems()));
                 } else {
-                    project.setModel(interimResult.result.getEffectiveModel());
-                    result = new DefaultProjectBuildingResult(project, e.getProblems(), null);
+                    project.setModel(new org.apache.maven.model.Model(interimResult.result.getEffectiveModel()));
+                    result = new DefaultProjectBuildingResult(project, convert(e.getProblems()), null);
                 }
                 return Collections.singletonList(result);
             }
         }
 
-        @SuppressWarnings("checkstyle:methodlength")
-        private void initProject(MavenProject project, Map<File, MavenProject> projects, ModelBuildingResult result) {
-            project.setModel(result.getEffectiveModel());
-            project.setOriginalModel(result.getFileModel());
+        private List<org.apache.maven.model.building.ModelProblem> convert(List<ModelProblem> problems) {
+            if (problems == null) {
+                return null;
+            }
+            return problems.stream()
+                    .map(p -> (org.apache.maven.model.building.ModelProblem) new DefaultModelProblem(
+                            p.getMessage(),
+                            org.apache.maven.model.building.ModelProblem.Severity.valueOf(
+                                    p.getSeverity().name()),
+                            org.apache.maven.model.building.ModelProblem.Version.valueOf(
+                                    p.getVersion().name()),
+                            p.getSource(),
+                            p.getLineNumber(),
+                            p.getColumnNumber(),
+                            p.getModelId(),
+                            p.getException()))
+                    .toList();
+        }
+
+        @SuppressWarnings({"checkstyle:methodlength", "deprecation"})
+        private void initProject(MavenProject project, Map<File, MavenProject> projects, ModelBuilderResult result) {
+            project.setModel(new org.apache.maven.model.Model(result.getEffectiveModel()));
+            project.setOriginalModel(new org.apache.maven.model.Model(result.getFileModel()));
 
             initParent(project, projects, result);
 
@@ -638,17 +788,17 @@ public class DefaultProjectBuilder implements ProjectBuilder {
 
             // only set those on 2nd phase, ignore on 1st pass
             if (project.getFile() != null) {
-                Build build = project.getBuild();
+                Build build = project.getBuild().getDelegate();
                 project.addScriptSourceRoot(build.getScriptSourceDirectory());
                 project.addCompileSourceRoot(build.getSourceDirectory());
                 project.addTestCompileSourceRoot(build.getTestSourceDirectory());
             }
 
-            List<Profile> activeProfiles = new ArrayList<>();
-            activeProfiles.addAll(
-                    result.getActivePomProfiles(result.getModelIds().get(0)));
-            activeProfiles.addAll(result.getActiveExternalProfiles());
-            project.setActiveProfiles(activeProfiles);
+            project.setActiveProfiles(Stream.concat(
+                            result.getActivePomProfiles(result.getModelIds().get(0)).stream(),
+                            result.getActiveExternalProfiles().stream())
+                    .map(org.apache.maven.model.Profile::new)
+                    .toList());
 
             project.setInjectedProfileIds("external", getProfileIds(result.getActiveExternalProfiles()));
             for (String modelId : result.getModelIds()) {
@@ -663,8 +813,8 @@ public class DefaultProjectBuilder implements ProjectBuilder {
 
             // pluginArtifacts
             Set<Artifact> pluginArtifacts = new HashSet<>();
-            for (Plugin plugin : project.getBuildPlugins()) {
-                Artifact artifact = repositorySystem.createPluginArtifact(plugin);
+            for (Plugin plugin : project.getModel().getDelegate().getBuild().getPlugins()) {
+                Artifact artifact = repositorySystem.createPluginArtifact(new org.apache.maven.model.Plugin(plugin));
 
                 if (artifact != null) {
                     pluginArtifacts.add(artifact);
@@ -674,13 +824,15 @@ public class DefaultProjectBuilder implements ProjectBuilder {
 
             // reportArtifacts
             Set<Artifact> reportArtifacts = new HashSet<>();
-            for (ReportPlugin report : project.getReportPlugins()) {
-                Plugin pp = new Plugin();
-                pp.setGroupId(report.getGroupId());
-                pp.setArtifactId(report.getArtifactId());
-                pp.setVersion(report.getVersion());
+            for (ReportPlugin report :
+                    project.getModel().getDelegate().getReporting().getPlugins()) {
+                Plugin pp = Plugin.newBuilder()
+                        .groupId(report.getGroupId())
+                        .artifactId(report.getArtifactId())
+                        .version(report.getVersion())
+                        .build();
 
-                Artifact artifact = repositorySystem.createPluginArtifact(pp);
+                Artifact artifact = repositorySystem.createPluginArtifact(new org.apache.maven.model.Plugin(pp));
 
                 if (artifact != null) {
                     reportArtifacts.add(artifact);
@@ -690,7 +842,8 @@ public class DefaultProjectBuilder implements ProjectBuilder {
 
             // extensionArtifacts
             Set<Artifact> extensionArtifacts = new HashSet<>();
-            List<Extension> extensions = project.getBuildExtensions();
+            List<Extension> extensions =
+                    project.getModel().getDelegate().getBuild().getExtensions();
             if (extensions != null) {
                 for (Extension ext : extensions) {
                     String version;
@@ -712,14 +865,16 @@ public class DefaultProjectBuilder implements ProjectBuilder {
 
             // managedVersionMap
             Map<String, Artifact> map = Collections.emptyMap();
-            final DependencyManagement dependencyManagement = project.getDependencyManagement();
+            final DependencyManagement dependencyManagement =
+                    project.getModel().getDelegate().getDependencyManagement();
             if (dependencyManagement != null
                     && dependencyManagement.getDependencies() != null
                     && !dependencyManagement.getDependencies().isEmpty()) {
                 map = new LazyMap<>(() -> {
                     Map<String, Artifact> tmp = new HashMap<>();
                     for (Dependency d : dependencyManagement.getDependencies()) {
-                        Artifact artifact = repositorySystem.createDependencyArtifact(d);
+                        Artifact artifact =
+                                repositorySystem.createDependencyArtifact(new org.apache.maven.model.Dependency(d));
                         if (artifact != null) {
                             tmp.put(d.getManagementKey(), artifact);
                         }
@@ -733,14 +888,18 @@ public class DefaultProjectBuilder implements ProjectBuilder {
             if (project.getDistributionManagement() != null
                     && project.getDistributionManagement().getRepository() != null) {
                 try {
-                    DeploymentRepository r = project.getDistributionManagement().getRepository();
+                    DeploymentRepository r = project.getModel()
+                            .getDelegate()
+                            .getDistributionManagement()
+                            .getRepository();
                     if (r.getId() != null
                             && !r.getId().isEmpty()
                             && r.getUrl() != null
                             && !r.getUrl().isEmpty()) {
-                        ArtifactRepository repo = MavenRepositorySystem.buildArtifactRepository(r);
-                        repositorySystem.injectProxy(request.getRepositorySession(), Arrays.asList(repo));
-                        repositorySystem.injectAuthentication(request.getRepositorySession(), Arrays.asList(repo));
+                        ArtifactRepository repo = MavenRepositorySystem.buildArtifactRepository(
+                                new org.apache.maven.model.DeploymentRepository(r));
+                        repositorySystem.injectProxy(request.getRepositorySession(), List.of(repo));
+                        repositorySystem.injectAuthentication(request.getRepositorySession(), List.of(repo));
                         project.setReleaseArtifactRepository(repo);
                     }
                 } catch (InvalidRepositoryException e) {
@@ -753,14 +912,18 @@ public class DefaultProjectBuilder implements ProjectBuilder {
             if (project.getDistributionManagement() != null
                     && project.getDistributionManagement().getSnapshotRepository() != null) {
                 try {
-                    DeploymentRepository r = project.getDistributionManagement().getSnapshotRepository();
+                    DeploymentRepository r = project.getModel()
+                            .getDelegate()
+                            .getDistributionManagement()
+                            .getSnapshotRepository();
                     if (r.getId() != null
                             && !r.getId().isEmpty()
                             && r.getUrl() != null
                             && !r.getUrl().isEmpty()) {
-                        ArtifactRepository repo = MavenRepositorySystem.buildArtifactRepository(r);
-                        repositorySystem.injectProxy(request.getRepositorySession(), Arrays.asList(repo));
-                        repositorySystem.injectAuthentication(request.getRepositorySession(), Arrays.asList(repo));
+                        ArtifactRepository repo = MavenRepositorySystem.buildArtifactRepository(
+                                new org.apache.maven.model.DeploymentRepository(r));
+                        repositorySystem.injectProxy(request.getRepositorySession(), List.of(repo));
+                        repositorySystem.injectAuthentication(request.getRepositorySession(), List.of(repo));
                         project.setSnapshotArtifactRepository(repo);
                     }
                 } catch (InvalidRepositoryException e) {
@@ -770,10 +933,10 @@ public class DefaultProjectBuilder implements ProjectBuilder {
             }
         }
 
-        private void initParent(MavenProject project, Map<File, MavenProject> projects, ModelBuildingResult result) {
+        private void initParent(MavenProject project, Map<File, MavenProject> projects, ModelBuilderResult result) {
             Model parentModel = result.getModelIds().size() > 1
                             && !result.getModelIds().get(1).isEmpty()
-                    ? result.getRawModel(result.getModelIds().get(1))
+                    ? result.getRawModel(result.getModelIds().get(1)).orElse(null)
                     : null;
 
             if (parentModel != null) {
@@ -785,8 +948,9 @@ public class DefaultProjectBuilder implements ProjectBuilder {
 
                 // org.apache.maven.its.mng4834:parent:0.1
                 String parentModelId = result.getModelIds().get(1);
-                File parentPomFile = result.getRawModel(parentModelId).getPomFile();
-                MavenProject parent = parentPomFile != null ? projects.get(parentPomFile) : null;
+                Path parentPomFile =
+                        result.getRawModel(parentModelId).map(Model::getPomFile).orElse(null);
+                MavenProject parent = parentPomFile != null ? projects.get(parentPomFile.toFile()) : null;
                 if (parent == null) {
                     //
                     // At this point the DefaultModelBuildingListener has fired and it populates the
@@ -795,9 +959,9 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                     //
                     request.setRemoteRepositories(project.getRemoteArtifactRepositories());
                     if (parentPomFile != null) {
-                        project.setParentFile(parentPomFile);
+                        project.setParentFile(parentPomFile.toFile());
                         try {
-                            parent = build(parentPomFile, new FileModelSource(parentPomFile))
+                            parent = build(parentPomFile, ModelSource.fromPath(parentPomFile))
                                     .getProject();
                         } catch (ProjectBuildingException e) {
                             // MNG-4488 where let invalid parents slide on by
@@ -832,35 +996,41 @@ public class DefaultProjectBuilder implements ProjectBuilder {
             }
         }
 
-        private ModelBuildingRequest getModelBuildingRequest() {
-            ModelBuildingRequest modelBuildingRequest = new DefaultModelBuildingRequest();
+        private ModelBuilderRequest.ModelBuilderRequestBuilder getModelBuildingRequest() {
+            ModelBuilderRequest.ModelBuilderRequestBuilder modelBuildingRequest = ModelBuilderRequest.builder();
 
             RequestTrace trace = RequestTrace.newChild(null, request).newChild(modelBuildingRequest);
 
-            ModelResolver resolver = new ProjectModelResolver(
+            ProjectModelResolver pmr = new ProjectModelResolver(
                     session,
                     trace,
                     repoSystem,
                     repositoryManager,
                     repositories,
                     request.getRepositoryMerging(),
-                    modelPool);
+                    modelPool,
+                    parentCache);
+            ModelResolver resolver = new ModelResolverWrapper(pmr);
 
-            modelBuildingRequest.setValidationLevel(request.getValidationLevel());
-            modelBuildingRequest.setProcessPlugins(request.isProcessPlugins());
-            modelBuildingRequest.setProfiles(request.getProfiles());
-            modelBuildingRequest.setActiveProfileIds(request.getActiveProfileIds());
-            modelBuildingRequest.setInactiveProfileIds(request.getInactiveProfileIds());
-            modelBuildingRequest.setSystemProperties(request.getSystemProperties());
-            modelBuildingRequest.setUserProperties(request.getUserProperties());
-            modelBuildingRequest.setBuildStartTime(request.getBuildStartTime());
-            modelBuildingRequest.setModelResolver(resolver);
-            // this is a hint that we want to build 1 file, so don't cache. See MNG-7063
-            if (modelPool != null) {
-                modelBuildingRequest.setModelCache(modelCacheFactory.createCache(session));
-            }
-            modelBuildingRequest.setTransformerContextBuilder(transformerContextBuilder);
-            DefaultSession session = (DefaultSession) this.session.getData().get(DefaultSession.class);
+            modelBuildingRequest.session(InternalSession.from(session));
+            modelBuildingRequest.validationLevel(request.getValidationLevel());
+            modelBuildingRequest.processPlugins(request.isProcessPlugins());
+            modelBuildingRequest.profiles(
+                    request.getProfiles() != null
+                            ? request.getProfiles().stream()
+                                    .map(org.apache.maven.model.Profile::getDelegate)
+                                    .toList()
+                            : null);
+            modelBuildingRequest.activeProfileIds(request.getActiveProfileIds());
+            modelBuildingRequest.inactiveProfileIds(request.getInactiveProfileIds());
+            modelBuildingRequest.systemProperties(toMap(request.getSystemProperties()));
+            modelBuildingRequest.userProperties(toMap(request.getUserProperties()));
+            // bv4: modelBuildingRequest.setBuildStartTime(request.getBuildStartTime());
+            modelBuildingRequest.modelResolver(resolver);
+            modelBuildingRequest.transformerContextBuilder(transformerContextBuilder);
+            /* TODO: bv4
+            InternalMavenSession session =
+                    (InternalMavenSession) this.session.getData().get(InternalMavenSession.class);
             if (session != null) {
                 try {
                     modelBuildingRequest.setRootDirectory(session.getRootDirectory());
@@ -868,6 +1038,7 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                     // can happen if root directory cannot be found, just ignore
                 }
             }
+            */
 
             return modelBuildingRequest;
         }
@@ -896,7 +1067,8 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                 for (Artifact artifact : artifacts) {
                     if (!artifact.isResolved()) {
                         String path = lrm.getPathForLocalArtifact(RepositoryUtils.toArtifact(artifact));
-                        artifact.setFile(new File(lrm.getRepository().getBasedir(), path));
+                        artifact.setFile(
+                                lrm.getRepository().getBasePath().resolve(path).toFile());
                     }
                 }
             }
@@ -907,8 +1079,8 @@ public class DefaultProjectBuilder implements ProjectBuilder {
         }
     }
 
-    private List<String> getProfileIds(List<org.apache.maven.model.Profile> profiles) {
-        return profiles.stream().map(org.apache.maven.model.Profile::getId).collect(Collectors.toList());
+    private List<String> getProfileIds(List<Profile> profiles) {
+        return profiles.stream().map(Profile::getId).collect(Collectors.toList());
     }
 
     private static ModelSource createStubModelSource(Artifact artifact) {
@@ -923,27 +1095,52 @@ public class DefaultProjectBuilder implements ProjectBuilder {
         buffer.append("<packaging>").append(artifact.getType()).append("</packaging>");
         buffer.append("</project>");
 
-        return new StringModelSource(buffer, artifact.getId());
+        return new ModelSource() {
+            @Override
+            public ModelSource resolve(ModelLocator modelLocator, String relative) {
+                return null;
+            }
+
+            @Override
+            public Path getPath() {
+                return null;
+            }
+
+            @Override
+            public InputStream openStream() throws IOException {
+                return new ByteArrayInputStream(buffer.toString().getBytes(StandardCharsets.UTF_8));
+            }
+
+            @Override
+            public String getLocation() {
+                return artifact.getId();
+            }
+
+            @Override
+            public Source resolve(String relative) {
+                return null;
+            }
+        };
     }
 
-    private static String inheritedGroupId(final ModelBuildingResult result, final int modelIndex) {
+    private static String inheritedGroupId(final ModelBuilderResult result, final int modelIndex) {
         String groupId = null;
         final String modelId = result.getModelIds().get(modelIndex);
 
         if (!modelId.isEmpty()) {
-            final Model model = result.getRawModel(modelId);
+            final Model model = result.getRawModel(modelId).orElseThrow();
             groupId = model.getGroupId() != null ? model.getGroupId() : inheritedGroupId(result, modelIndex + 1);
         }
 
         return groupId;
     }
 
-    private static String inheritedVersion(final ModelBuildingResult result, final int modelIndex) {
+    private static String inheritedVersion(final ModelBuilderResult result, final int modelIndex) {
         String version = null;
         final String modelId = result.getModelIds().get(modelIndex);
 
         if (!modelId.isEmpty()) {
-            version = result.getRawModel(modelId).getVersion();
+            version = result.getRawModel(modelId).map(Model::getVersion).orElse(null);
             if (version == null) {
                 version = inheritedVersion(result, modelIndex + 1);
             }
@@ -952,6 +1149,17 @@ public class DefaultProjectBuilder implements ProjectBuilder {
         return version;
     }
 
+    private static Map<String, String> toMap(Properties properties) {
+        if (properties != null && !properties.isEmpty()) {
+            return properties.entrySet().stream()
+                    .collect(Collectors.toMap(e -> String.valueOf(e.getKey()), e -> String.valueOf(e.getValue())));
+
+        } else {
+            return null;
+        }
+    }
+
+    @SuppressWarnings("unchecked")
     static <T extends Throwable> void uncheckedThrow(Throwable t) throws T {
         throw (T) t; // rely on vacuous cast
     }
@@ -974,6 +1182,74 @@ public class DefaultProjectBuilder implements ProjectBuilder {
                 }
             }
             return delegate.entrySet();
+        }
+    }
+
+    protected class ModelResolverWrapper implements ModelResolver {
+        protected final org.apache.maven.model.resolution.ModelResolver resolver;
+
+        protected ModelResolverWrapper(org.apache.maven.model.resolution.ModelResolver resolver) {
+            this.resolver = resolver;
+        }
+
+        @Override
+        public ModelSource resolveModel(Session session, String groupId, String artifactId, String version)
+                throws ModelResolverException {
+            try {
+                return toSource(resolver.resolveModel(groupId, artifactId, version));
+            } catch (UnresolvableModelException e) {
+                throw new ModelResolverException(e.getMessage(), e.getGroupId(), e.getArtifactId(), e.getVersion(), e);
+            }
+        }
+
+        @Override
+        public ModelSource resolveModel(Session session, Parent parent, AtomicReference<Parent> modified)
+                throws ModelResolverException {
+            try {
+                org.apache.maven.model.Parent p = new org.apache.maven.model.Parent(parent);
+                ModelSource source = toSource(resolver.resolveModel(p));
+                if (p.getDelegate() != parent) {
+                    modified.set(p.getDelegate());
+                }
+                return source;
+            } catch (UnresolvableModelException e) {
+                throw new ModelResolverException(e.getMessage(), e.getGroupId(), e.getArtifactId(), e.getVersion(), e);
+            }
+        }
+
+        @Override
+        public ModelSource resolveModel(Session session, Dependency dependency, AtomicReference<Dependency> modified)
+                throws ModelResolverException {
+            try {
+                org.apache.maven.model.Dependency d = new org.apache.maven.model.Dependency(dependency);
+                ModelSource source = toSource(resolver.resolveModel(d));
+                if (d.getDelegate() != dependency) {
+                    modified.set(d.getDelegate());
+                }
+                return source;
+            } catch (UnresolvableModelException e) {
+                throw new ModelResolverException(e.getMessage(), e.getGroupId(), e.getArtifactId(), e.getVersion(), e);
+            }
+        }
+
+        @Override
+        public void addRepository(Session session, Repository repository) throws ModelResolverException {
+            addRepository(session, repository, false);
+        }
+
+        @Override
+        public void addRepository(Session session, Repository repository, boolean replace)
+                throws ModelResolverException {
+            try {
+                resolver.addRepository(new org.apache.maven.model.Repository(repository), replace);
+            } catch (org.apache.maven.model.resolution.InvalidRepositoryException e) {
+                throw new MavenException(e);
+            }
+        }
+
+        @Override
+        public ModelResolver newCopy() {
+            return new ModelResolverWrapper(resolver.newCopy());
         }
     }
 }
